--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
   "devDependencies": {
     "gh-pages": "^2.0.1"
   },
-  "homepage": "https://oper1782.github.io/mise"
+  "homepage": "http://miseysm.com"
 }
